tests/stage2/invalid/out_of_scope_var.c
int main(){
    if(1){
        int a = 7;
        a = 4;
    }
    a = 5;
    return a;
}
